--- a/app/src/main/res/layout/recyclerview.xml
+++ b/app/src/main/res/layout/recyclerview.xml
@@ -3,10 +3,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rcv_list"
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeContainer"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rcv_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+    <com.ctrlplusz.anytextview.AnyTextView
+        android:id="@+id/txt_notification"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:fontFamily="@font/calibri"
+        android:gravity="center"
+        android:textColor="@color/color_key"
+        android:textSize="@dimen/_16sdp"
+        android:visibility="gone" />
 
     <ProgressBar
         android:id="@+id/loadingBar"
