--- a/app/src/main/res/layout/activity_manager.xml
+++ b/app/src/main/res/layout/activity_manager.xml
@@ -133,6 +133,6 @@
         android:fontFamily="@font/calibri"
         android:padding="@dimen/_5sdp"
         android:text="version: 0.0.1"
-        android:textColor="@color/gray"
+        android:textColor="@color/hint_edit_text_color"
         android:textSize="@dimen/_10sdp" />
 </RelativeLayout>
