--- a/app/src/main/res/layout/custom_notification.xml
+++ b/app/src/main/res/layout/custom_notification.xml
@@ -2,8 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/root"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="@dimen/_10sdp">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,12 +13,14 @@
             android:id="@+id/tvTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
             android:layout_weight="3"
+            android:ellipsize="marquee"
             android:fontFamily="@font/calibrib"
+            android:gravity="center_horizontal"
+            android:maxLines="2"
             android:text="Dọn Vệ Sinh Tầng 1"
             android:textColor="@color/color_key"
-            android:textSize="@dimen/_14sdp" />
+            android:textSize="@dimen/_12sdp" />
 
         <TextView
             android:id="@+id/txt_time"
@@ -32,6 +33,6 @@
             android:gravity="center_horizontal"
             android:text="01p:30s"
             android:textColor="@color/color_key"
-            android:textSize="@dimen/_16sdp" />
+            android:textSize="@dimen/_14sdp" />
     </LinearLayout>
 </RelativeLayout>
