--- a/app/src/main/res/layout/item_layout_management.xml
+++ b/app/src/main/res/layout/item_layout_management.xml
@@ -31,9 +31,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/calibrib"
-                android:text="Nguyen Van A"
                 android:textColor="@color/white"
-                android:textSize="@dimen/_14sdp" />
+                android:textSize="@dimen/_12sdp" />
 
             <com.ctrlplusz.anytextview.AnyTextView
                 android:id="@+id/txt_duration"
@@ -41,9 +40,8 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:fontFamily="@font/calibrib"
-                android:text="@string/text_job_done"
                 android:textColor="@color/white"
-                android:textSize="@dimen/_16sdp" />
+                android:textSize="@dimen/_14sdp" />
 
         </RelativeLayout>
 
@@ -53,9 +51,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_5sdp"
             android:fontFamily="@font/calibri"
-            android:text="7:00 - 8:15"
             android:textColor="@color/white"
-            android:textSize="@dimen/_14sdp" />
+            android:textSize="@dimen/_12sdp" />
 
         <com.ctrlplusz.anytextview.AnyTextView
             android:id="@+id/txt_description"
@@ -63,9 +60,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_5sdp"
             android:fontFamily="@font/calibri"
-            android:text="Trực phát sinh ngoại cảnh, sảnh hay thang máy tầng hầm, WC tầng hầm"
             android:textColor="@color/white"
-            android:textSize="@dimen/_14sdp" />
+            android:textSize="@dimen/_12sdp" />
 
         <RelativeLayout
             android:id="@+id/view_feedback"
@@ -85,7 +81,7 @@
                 android:maxLines="4"
                 android:padding="@dimen/_5sdp"
                 android:textColor="@color/black"
-                android:textColorHint="@color/gray"
+                android:textColorHint="@color/hint_edit_text_color"
                 android:textSize="@dimen/_14sdp" />
 
             <LinearLayout
@@ -103,7 +99,7 @@
                     android:layout_marginRight="@dimen/_20sdp"
                     android:layout_weight="1"
                     android:background="@drawable/border_radius_button"
-                    android:text="Hoàn Thành"
+                    android:text="Đạt"
                     android:textSize="@dimen/_13sdp" />
 
                 <androidx.appcompat.widget.AppCompatButton
@@ -112,7 +108,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:background="@drawable/border_radius_button_gray"
-                    android:text="Không Hoàn Thành"
+                    android:text="Không Đạt"
                     android:textSize="@dimen/_13sdp" />
             </LinearLayout>
         </RelativeLayout>
