--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -63,6 +63,7 @@
             android:hint="@string/hint_account_pass"
             android:lines="1"
             android:maxLines="1"
+            android:singleLine="true"
             android:padding="@dimen/_10sdp"
             android:textColor="@color/color_key"
             android:textColorHint="@color/color_key" />
